# SEEK-UNSW-COMP6713-Group-Project

./: INDIVIDUAL EFFORT.docx  PRESENTATION.txt  README.md
CODE/fine_tuning_GPT-2/: Gradio_Salary.ipynb  Gradio_Seniority.ipynb  Gradio_Work_Arrangements.ipynb  README.md  fine_tuned_GPT2_salary.ipynb  fine_tuned_GPT2_seniority.ipynb  fine_tuned_GPT2_work_arrangements.ipynb
CODE/fine_tuning_Mistral-7B/: README.md  SA_Mistral_7B_Lora.csv  SE_Mistral_7B_Lora.csv  WA_Mistral_7B_Lora.csv  common.py  demo.py  mistral_config.py  mistral_data.py  mistral_demo.ipynb  mistral_model.py  mistral_raw.ipynb  mistral_task_sa.ipynb  mistral_task_se.ipynb  mistral_task_wa.ipynb  mistral_train.ipynb  pyproject.toml
CODE/llm_evaluation/: README_llm_evaluation.md  config.py  run_experiments.py
CODE/rule_based_evaluation/: rule_based_seniority.ipynb  salary_rule_based_model.ipynb  work_arrangements_rule_based_model.ipynb
MISC/EDA/: seniority_distribution.py
MISC/label_unlabelled_data/: combined_work_arrangements_unlabelled_set.csv  diff_claude_gpt_gemini.csv  discard_new.csv  label_with_claude_gpt4.1_work_arrangements_unlabelled_set.csv  label_with_claude_work_arrangements_unlabelled_set.csv
MISC/mistral/: salary_test.jsonl  seniority_test.jsonl  work_arrangements_test.jsonl  work_arrangements_train.jsonl
MISC/seniority_data_mapped/: seniority_labelled_test_set_mapped.csv
MISC/seniority_data_mapped_new/: seniority_labelled_test_set_mapped.csv
MISC/split_seniority-dev-data_into_train_validation/: validation_set.csv
MISC/utils/: __init__.py  seniority_mapper.py  split_data.py  (+2 more)
(+18 files in other folders)
